--- a/config.yaml
+++ b/config.yaml
@@ -56,12 +56,17 @@ spec:
       apps: pulumi-app
 
   identityPodAgent:
-   deploy: false
+   deploy: true
    identities:
-   - roleName: eks-pod-example
-     namespace: example
-     awsPolicies: [""]
-     selfManagedPoliciesPath: [""]
+    roles:
+    - roleName: eks-pod-example
+      awsPolicies: ["arn:aws:iam::aws:policy/AmazonS3FullAccess"]
+      selfManagedPoliciesPath: ["../policies/example-policy.json"]
+    relationships:
+    - roleName: eks-pod-example
+      namespace: example
+    - roleName: eks-pod-example
+      namespace: default
 
   helmChartsComponentes:
     components:
